--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>net.nextpulse</groupId>
   <artifactId>jfactuursturen</artifactId>
-  <version>0.1</version>
+  <version>0.2</version>
   <packaging>jar</packaging>
   <url>https://github.com/yholkamp/jfactuursturen</url>
   <name>JFactuurSturen</name>
@@ -39,6 +39,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <kotlin.version>1.1.3</kotlin.version>
+    <jackson.version>2.9.7</jackson.version>
   </properties>
 
   <distributionManagement>
@@ -60,12 +61,12 @@
     <dependency>
       <groupId>com.fasterxml.jackson.module</groupId>
       <artifactId>jackson-module-kotlin</artifactId>
-      <version>2.8.8</version>
+      <version>${jackson.version}</version>
     </dependency>
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-annotations</artifactId>
-      <version>2.8.8</version>
+      <version>${jackson.version}</version>
     </dependency>
     <dependency>
       <groupId>joda-time</groupId>
@@ -75,12 +76,12 @@
     <dependency>
       <groupId>com.fasterxml.jackson.datatype</groupId>
       <artifactId>jackson-datatype-joda</artifactId>
-      <version>2.8.8</version>
+      <version>${jackson.version}</version>
     </dependency>
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
-      <version>2.8.8</version>
+      <version>${jackson.version}</version>
     </dependency>
 
     <!-- Logging -->
